# Dj_SavingSync

./: .env.dev  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml  entrypoint.sh  mypy.ini  pyproject.toml  tailwind.config.js
.github/workflows/: test.yaml
cashflows/: apps.py
config/: settings.py  urls.py
nginx/: default.conf
src/accounts/: managers.py  models.py  tests.py
src/accounts/migrations/: 0001_initial.py
src/cashflows/: admin.py  apps.py  forms.py  models.py  querysets.py  urls.py  views.py
src/cashflows/migrations/: 0001_initial.py  0002_alter_cashflow_source_alter_cashflow_type.py  0003_alter_cashflow_amount.py  0004_alter_cashflow_source.py  0005_alter_cashflow_type.py
src/templates/: base.html  delete_cashflow_form.html  home.html
src/templates/cashflows/: delete_cashflow_form.html  home.html  list-item.html
src/theme/: apps.py
src/theme/static_src/: package-lock.json  package.json
tests/: base.py  environment.py
tests/features/: add_salary.feature  example.feature  test_add_salary.py  test_cashflows.py
tests/steps/: definitions.py
