[tool.poetry]
name = "dj-project-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.6"
environs = {extras = ["django"], version = "^9.5.0"}
behave-django = "^1.4.0"
model-bakery = "^1.10.1"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
mypy = "^1.1.1"
django-stubs = "^1.16.0"
playwright = "^1.31.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
